fix(landing-page): fix anmation overflow issue

--- a/src/pages/landing-page/landingPage.css
+++ b/src/pages/landing-page/landingPage.css
@@ -2,7 +2,7 @@ body {
   overflow: hidden;
 }
 .ocean { 
-  position:absolute;
+  position:fixed;
   bottom:0;
   left:0;
   background: #015871;
